--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codedamn",
+  "name": "tranlate_ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,8 +15,15 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "openai": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
